[7] Implementação Listagem das Atividades

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,11 @@
         <item>Outro</item>
     </array>
 
+    <array name="activitys">
+        <item>Caminhada</item>
+        <item>Ciclismo</item>
+        <item>Corrida</item>
+        <item>Natação</item>
+    </array>
+
 </resources>
